# rps-tg

./: README.md
client/: index.html  package-lock.json  package.json
client/src/: App.svelte  app.css  main.ts  stores.ts
client/src/lib/: Home.svelte  Matchmaking.svelte  Room.svelte  constants.ts
client/src/lib/room/: Loader.svelte
client/src/lib/types/: messages.ts
client/src/lib/ws/: Messenger.ts  WsConnection.ts
server/: Cargo.toml  README.md
server/src/: main.rs  messages.rs  room.rs  server.rs  transport.rs  types.rs  websocket.rs  websockets.rs
server/src/room/: actor.rs  error.rs  messages.rs
server/src/server/: actor.rs  error.rs  memory_server.rs  messages.rs
server/src/transport/: client_messages.rs  messages.rs  ws.rs
server/src/websockets/: client_messages.rs  ws.rs
